--- a/lab3/README
+++ b/lab3/README
@@ -1,7 +1,7 @@
 #Skyler Murphy
 #10/21/14
 
-#![](img/Coastal_Vulnerability_SM.png)
+![](img/Coastal_Vulnerability_SM.png)
 
 #1. Along the west coast of Vancouver Island, there are four predominant natural coastal habitats: low dunes, high dunes, sea grass and kelp.  While all four of these are exposed to coastal hazards such as erosion and inundation during storms to varying degrees, kelp is the most vulnerable.  This is apparent from the results of running the InVest model for the Vancouver Island area.  Our results show that areas of the coast with kelp forests off shore generally have high to extreme vulnerability.  The area that is most vulnerable to coastal erosion and inundation during storms is the south west coastline in the Carmanah Walbran Provincial Park.  After kelp, sea grass ecosystems are the most vulnerable.  Much of the sea grass ecosystems along Vancouver Islands coast line are in areas of high vulnerability to erosion and inundation.
 
